@@ -19,7 +19,6 @@ no if "$]" >= 5.033006, feature => 'bareword_filehandles';
 use List::Util 'any';
 use Ref::Util 0.100 'is_plain_arrayref';
 use Scalar::Util 'looks_like_number';
-use if "$]" >= 5.022, POSIX => 'isinf';
 use JSON::Schema::Modern::Utilities qw(is_type get_type is_bignum is_equal is_elements_unique E assert_keyword_type assert_pattern jsonp sprintf_num);
 use Math::BigFloat;
 use namespace::clean;
@@ -116,23 +115,20 @@ sub _eval_keyword_multipleOf ($class, $data, $schema, $state) {
     and not ($state->{stringy_numbers} and is_type('string', $data) and looks_like_number($data)
       and do { $data = 0+$data; 1 });
 
+  my $remainder;
+
   # if either value is a float, use the bignum library for the calculation for an accurate remainder
   if (is_bignum($data) or is_bignum($schema->{multipleOf})
       or get_type($data) eq 'number' or get_type($schema->{multipleOf}) eq 'number') {
-    $data = is_bignum($data) ? $data->copy : Math::BigFloat->new($data);
+    my $dividend = is_bignum($data) ? $data->copy : Math::BigFloat->new($data);
     my $divisor = is_bignum($schema->{multipleOf}) ? $schema->{multipleOf} : Math::BigFloat->new($schema->{multipleOf});
-
-    my ($quotient, $remainder) = $data->bdiv($divisor);
-    return E($state, 'overflow while calculating quotient') if $quotient->is_inf;
-    return 1 if $remainder == 0;
+    $remainder = $dividend->bmod($divisor);
   }
   else {
-    my $quotient = $data / $schema->{multipleOf};
-    return E($state, 'overflow while calculating quotient of integers')
-      if "$]" >= 5.022 ? isinf($quotient) : $quotient =~ /^-?Inf$/i;
-    return 1 if int($quotient) == $quotient;
+    $remainder = $data % $schema->{multipleOf};
   }
 
+  return 1 if $remainder == 0;
   return E($state, 'value is not a multiple of %s', sprintf_num($schema->{multipleOf}));
 }
 
